Keyframe insertion by a Keying Set fails in the edit mode when keyframing object data properties #39902

Closed
opened 2014-04-25 18:44:32 +02:00 by Tamito Kajiyama · 6 comments

System Information
Windows 7 64-bit, Intel Core i7 2.7GHz, NVIDIA Quadro 1000M

Blender Version
Broken: 2.70a release
Worked: N/A

Short description of error
Keyframe insertion by a Keying Set may fail during the edit mode when Keying Set channels refer to object data properties

Exact steps for others to reproduce the error
For example, object data properties such as mesh edge/face flags (e.g., use_seam and use_sharp) can be included in a Keying Set. Keyframing object data properties works fine in the object mode, but may fail in the edit mode when the properties to be keyframed have been updated since the last switching to the edit mode. The problem there is that the keyframed values are those at the time of switching to the edit mode, and not the updated values during the edit mode. In addition, the keyframe insertion operation reports a success that is not really the case.

From the applicative perspective, for now artists have to switch between the object mode and edit mode repeatedly while keyframing object data properties. That is a confusing and error-prone workflow.

Minimum steps to reproduce the reported problem:

  1. Start with the factory scene with the default cube.
  2. Go to the Scene tab of the Properties window, create a new Keying Set, and add a new path as follows:
  • Target ID block: Type = Mesh, ID = Cube
  • Data path: edges- .use_seam
  • Array target: All Items = disabled, Index = 0
  1. Select the cube, enter the edit mode, and apply the Mark Seam command to the edge between two vertices at (1, 1, -1) and (1, -1, -1).
  2. Stay in the edit mode and insert keyframes using the Keying Set by clicking the button to the right of the Active Keying Set entry in the Timeline window.
  3. Switch to the object mode in the 3D View window.
  4. Update the keyframed seam mark by incrementing the frame number and decrementing it.
  5. Enter the edit mode again, and check if the seam mark has disappeared as reported above.

I will soon submit a patch to address the documented issue. Code review is duly acknowledged.

**System Information** Windows 7 64-bit, Intel Core i7 2.7GHz, NVIDIA Quadro 1000M **Blender Version** Broken: 2.70a release Worked: N/A **Short description of error** Keyframe insertion by a Keying Set may fail during the edit mode when Keying Set channels refer to object data properties **Exact steps for others to reproduce the error** For example, object data properties such as mesh edge/face flags (e.g., use_seam and use_sharp) can be included in a Keying Set. Keyframing object data properties works fine in the object mode, but may fail in the edit mode when the properties to be keyframed have been updated since the last switching to the edit mode. The problem there is that the keyframed values are those at the time of switching to the edit mode, and not the updated values during the edit mode. In addition, the keyframe insertion operation reports a success that is not really the case. From the applicative perspective, for now artists have to switch between the object mode and edit mode repeatedly while keyframing object data properties. That is a confusing and error-prone workflow. Minimum steps to reproduce the reported problem: 1. Start with the factory scene with the default cube. 2. Go to the Scene tab of the Properties window, create a new Keying Set, and add a new path as follows: * Target ID block: Type = Mesh, ID = Cube * Data path: edges- [x].use_seam * Array target: All Items = disabled, Index = 0 3. Select the cube, enter the edit mode, and apply the Mark Seam command to the edge between two vertices at (1, 1, -1) and (1, -1, -1). 4. Stay in the edit mode and insert keyframes using the Keying Set by clicking the button to the right of the Active Keying Set entry in the Timeline window. 5. Switch to the object mode in the 3D View window. 6. Update the keyframed seam mark by incrementing the frame number and decrementing it. 7. Enter the edit mode again, and check if the seam mark has disappeared as reported above. I will soon submit a patch to address the documented issue. Code review is duly acknowledged.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Joshua Leung was assigned by Tamito Kajiyama 2014-04-25 18:44:32 +02:00
Author
Member

Added subscriber: @kjym3

Added subscriber: @kjym3

This issue was referenced by blender/blender-addons-contrib@2aa9d33404

This issue was referenced by blender/blender-addons-contrib@2aa9d33404ca96e6bd42224ebac19696e03550f8

This issue was referenced by 2aa9d33404

This issue was referenced by 2aa9d33404ca96e6bd42224ebac19696e03550f8
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Closed by commit 2aa9d33404.

Closed by commit 2aa9d33404.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39902
No description provided.