Fix T39902: Keyframe insertion by a Keying Set fails in the edit mode when keyframing object data properties.

Reviewers: aligorith

Reviewed By: aligorith

Differential Revision: https://developer.blender.org/D484