source/blender/editors/include/ED_keyframing.h
@@ -202,6 +202,9 @@ struct KeyingSet *ANIM_builtin_keyingset_get_named(struct KeyingSet *prevKS, con
 /* Find KeyingSet type info given a name */
 KeyingSetInfo *ANIM_keyingset_info_find_name(const char name[]);
 
+/* Find a given ID in the KeyingSet */
+bool ANIM_keyingset_find_id(struct KeyingSet *ks, ID *id);
+
 /* for RNA type registrations... */
 void ANIM_keyingset_info_register(KeyingSetInfo *ksi);
 void ANIM_keyingset_info_unregister(struct Main *bmain, KeyingSetInfo *ksi);
